--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
     --lighter-green: #00c6bf;
     --alpha-green: #deeef4;
 }
-/* @supports (scrollbar-color: var(--pink) var(--light-blue)) {
+@supports (scrollbar-color: var(--pink) var(--light-blue)) {
     * {
         scrollbar-color: var(--pink) var(--light-blue);
     }
@@ -23,7 +23,7 @@
 ::-webkit-scrollbar-thumb {
     background: linear-gradient( var(--pink), var(--dark-blue));
     height: 9rem;
-} */
+}
 body {
     font-family: 'Roboto', sans-serif;
     overflow-x: hidden;
@@ -448,7 +448,7 @@ article:last-of-type.animate-top {
     background-color: var(--pink);
     z-index: 9999;
     bottom: 35px;
-    right: 5%;
+    right: 7%;
 }
 .up i {
     color: var(--yellow);
